--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,7 @@
     "analyze": "ANALYZE=true NEXT_IGNORE_TYPE_CHECK=true NEXT_IGNORE_ESLINT=true SENTRY_UPLOAD_DRY_RUN=true next build",
     "build": "next build",
     "postbuild": "next-sitemap",
-    "dev": "next dev",
+    "dev": "PORT=3000 next dev",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx,.cjs,.mjs,.mdx --cache --cache-location ../../.cache/eslint/web.eslintcache",
     "lint:dist": "es-check -v",
     "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx,.cjs,.mjs,.mdx --fix",
