feat: add ssr to details page of web1 repo

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -23,6 +23,7 @@
       "@/test-utils": ["../config/tests/test-utils"],
       "@/config/*": ["./config/*"],
       "@/lib/*": ["./lib/*"],
+      "@/utils/*": ["./utils/*"],
       "@/components/*": ["./components/*"],
       "@/features/*": ["./features/*"],
       "@/pages/*": ["./pages/*"],
