--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,5 +8,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "exclude": ["**/node_modules", "**/.*/"]
+  "exclude": ["**/node_modules", "**/.*/"],
+  "allowSyntheticDefaultImports": true
 }
