--- a/apps/web-isr/package.json
+++ b/apps/web-isr/package.json
@@ -71,6 +71,8 @@
     "es-check": "^7.1.0",
     "eslint": "^8.35.0",
     "eslint-config-next": "^13.2.3",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
     "get-tsconfig": "^4.4.0",
     "jest": "^29.4.3",
     "jest-css-modules-transform": "4.4.2",
